--- a/src/main/resources/views/addInstanceView.fxml
+++ b/src/main/resources/views/addInstanceView.fxml
@@ -29,7 +29,7 @@
             <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="5.0" GridPane.columnSpan="2" GridPane.rowIndex="4">
                <children>
                   <Button mnemonicParsing="false" onAction="#onCancel" text="Abbrechen" />
-                  <Button mnemonicParsing="false" onAction="#onCreateInstance" text="Sichern" />
+                  <Button mnemonicParsing="false" onAction="#onCreateInstance" text="Erstellen" />
                </children>
             </HBox>
             <TextField fx:id="txtClassName" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
