Laden der Logistik-Ontologie und des PP-Falls jetzt möglich. Der Case-Viewer zeigt die Herkunft der jeweiligen Instanz an (Blau: Task-Ontologie, Rot: Domain-Ontologie)

--- a/src/main/resources/views/caseView.fxml
+++ b/src/main/resources/views/caseView.fxml
@@ -26,7 +26,7 @@
                         <Insets bottom="-2.0" left="-2.0" right="-2.0" top="-2.0" />
                      </padding>
                   </Button>
-                  <Button mnemonicParsing="false">
+                  <Button mnemonicParsing="false" onAction="#onExportAsImage">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
