--- a/src/main/resources/views/caseBaseView.fxml
+++ b/src/main/resources/views/caseBaseView.fxml
@@ -10,18 +10,11 @@
    <children>
       <HBox layoutX="223.0" layoutY="172.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <TableView fx:id="tblCaseBase" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-              <columns>
-                <TableColumn fx:id="tcCaseId" prefWidth="362.0" text="Fall ID" />
-                  <TableColumn fx:id="tcViewCase" minWidth="100.0" prefWidth="100.0" text="Fall ansehen" />
-                  <TableColumn fx:id="tcDeleteCase" minWidth="100.0" prefWidth="100.0" text="Fall löschen" />
-              </columns>
-            </TableView>
             <ToolBar orientation="VERTICAL" prefHeight="40.0" HBox.hgrow="NEVER">
               <items>
-                <Button mnemonicParsing="false" fx:id="btnImportCase">
+                <Button fx:id="btnImportCase" mnemonicParsing="false">
                      <graphic>
-                        <ImageView fx:id="btnImportCase" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../icons/import-case.png" />
                            </image>
@@ -33,6 +26,26 @@
                   </Button>
               </items>
             </ToolBar>
+            <Accordion fx:id="accordionLeft">
+              <panes>
+                <TitledPane text="Suche">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TextField fx:id="txtSearchCaseID" layoutX="14.0" layoutY="14.0" onKeyTyped="#onSearchCaseID" promptText="Suche nach Fall-ID..." AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </TitledPane>
+              </panes>
+            </Accordion>
+            <TableView fx:id="tblCaseBase" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+              <columns>
+                <TableColumn fx:id="tcCaseId" prefWidth="362.0" text="Fall ID" />
+                  <TableColumn fx:id="tcViewCase" minWidth="100.0" prefWidth="100.0" text="Fall ansehen" />
+                  <TableColumn fx:id="tcDeleteCase" minWidth="100.0" prefWidth="100.0" text="Fall löschen" />
+              </columns>
+            </TableView>
          </children>
       </HBox>
    </children>
