--- a/src/main/resources/views/caseView.fxml
+++ b/src/main/resources/views/caseView.fxml
@@ -61,59 +61,48 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
-                        <Accordion layoutX="34.0" layoutY="84.0" prefHeight="358.0" prefWidth="244.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <panes>
-                            <TitledPane text="Einwohnerzahl: 204932">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                                       <children>
-                                          <GridPane layoutX="8.0" layoutY="14.0" prefWidth="242.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
-                                             <children>
-                                                <Label text="Name" />
-                                                <TextField text="204932" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                                                <Label text="Typ" GridPane.rowIndex="1" />
-                                                <Label text="Float" GridPane.columnIndex="1" GridPane.rowIndex="1">
-                                                   <font>
-                                                      <Font name="System Bold" size="13.0" />
-                                                   </font>
-                                                </Label>
-                                                <Label text="Wert" GridPane.rowIndex="2" />
-                                                <Label text="Einwohnerzahl" GridPane.columnIndex="1" />
-                                                <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
-                                                   <children>
-                                                      <Button mnemonicParsing="false" text="Sichern" />
-                                                   </children>
-                                                </HBox>
-                                                <Separator prefWidth="200.0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-                                             </children>
-                                          </GridPane>
-                                       </children>
-                                    </AnchorPane>
-                              </content>
-                            </TitledPane>
-                            <TitledPane animated="false" text="GeographischeLänge: 2039203">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </TitledPane>
-                            <TitledPane animated="false" text="Geographische Breite: 2903948029348">
-                              <content>
-                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                              </content>
-                            </TitledPane>
-                          </panes>
-                        </Accordion>
+                        <VBox layoutX="47.0" layoutY="38.0" prefHeight="398.0" prefWidth="227.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                           <children>
+                              <HBox alignment="CENTER_RIGHT" prefWidth="200.0" spacing="5.0">
+                                 <children>
+                                    <Label maxWidth="1000.0" prefWidth="1000.0" text="Daten" />
+                                    <Button mnemonicParsing="false">
+                                       <graphic>
+                                          <ImageView fx:id="onAddDataProperty" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../icons/add.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <padding>
+                                          <Insets bottom="-2.0" left="-2.0" right="-2.0" top="-2.0" />
+                                       </padding>
+                                    </Button>
+                                    <Button mnemonicParsing="false">
+                                       <graphic>
+                                          <ImageView fx:id="onRemoveDataProperty" fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../icons/delete.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <padding>
+                                          <Insets bottom="-2.0" left="-2.0" right="-2.0" top="-2.0" />
+                                       </padding>
+                                    </Button>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                 </padding>
+                              </HBox>
+                              <TableView fx:id="tblDataProperties" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                                <columns>
+                                  <TableColumn fx:id="columnPropertyName" prefWidth="115.0" text="Eigenschaft" />
+                                  <TableColumn fx:id="columnPropertyValue" prefWidth="111.0" text="Wert" />
+                                </columns>
+                              </TableView>
+                           </children>
+                        </VBox>
                      </children>
                   </AnchorPane>
               </items>
