Einige funktionen in eigene Threads ausgelagert, damit der GUI-Thread nicht so oft blockiert. Das schließen der Fallbasis (TDB) wurde in einen Thread in einem ShutdownHook ausgelagert. Das Schließen der Fallbasis erfolgt jetzt auch, wenn System.exit() direkt aufgerufen wird (allerdings nicht, wenn Runtime.getRuntime().halt() aufgerufen wird)

--- a/src/main/resources/views/caseBaseView.fxml
+++ b/src/main/resources/views/caseBaseView.fxml
@@ -12,7 +12,7 @@
          <children>
             <ToolBar orientation="VERTICAL" prefHeight="40.0" HBox.hgrow="NEVER">
               <items>
-                <Button fx:id="btnImportCase" mnemonicParsing="false">
+                <Button fx:id="btnImportCase" mnemonicParsing="false" onAction="#onCaseImport">
                      <graphic>
                         <ImageView fitHeight="32.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                            <image>
