--- a/src/main/resources/views/mainAppView.fxml
+++ b/src/main/resources/views/mainAppView.fxml
@@ -17,7 +17,9 @@
               <tabs>
                 <Tab closable="false" text="Fallbasis">
                   <content>
-                    <AnchorPane fx:id="caseBaseTabPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane fx:id="caseBaseTabPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <fx:include fx:id="caseBaseView" source="caseBaseView.fxml"/>
+                    </AnchorPane>
                   </content>
                     <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
