--- a/src/main/resources/views/queryeditor/queryView.fxml
+++ b/src/main/resources/views/queryeditor/queryView.fxml
@@ -18,7 +18,9 @@
               <tabs>
                 <Tab closable="false" text="Neuer Fall">
                   <content>
-                    <AnchorPane fx:id="paneCase" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    <AnchorPane fx:id="paneCase" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                        <fx:include fx:id="caseView" source="../caseView.fxml"/>
+                    </AnchorPane>
                   </content>
                      <graphic>
                         <ImageView fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" >
